# asynqro

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.py  lgtm.yml
.ci/conan/: build.py  install.sh  run.sh
benchmarks/: CMakeLists.txt  benchmark_runner.sh  results_combiner.sh  results_parser.sh
benchmarks/empty-avalanche/: asynqro.cpp  boostasio.cpp  qtconcurrent.cpp  tbb.cpp  tbb_spawn.cpp  threadpoolcpp.cpp
benchmarks/empty-repost/: asynqro.cpp  boostasio.cpp  qtconcurrent.cpp  tbb.cpp  tbb_spawn.cpp  threadpoolcpp.cpp
benchmarks/helpers/: asio_thread_pool.hpp
benchmarks/timed-avalanche/: asynqro.cpp  boostasio.cpp  qtconcurrent.cpp  tbb.cpp  threadpoolcpp.cpp
benchmarks/timed-repost/: asynqro.cpp  boostasio.cpp  qtconcurrent.cpp  tbb.cpp  tbb_spawn.cpp  threadpoolcpp.cpp
benchmarks/timed-repost-loaded/: asynqro.cpp
cmake/: asynqro-config.cmake
conan_tests/: CMakeLists.txt  asynqro_tester.cpp  conanfile.py
docker/asynqro-builder/: Dockerfile  Dockerfile.old-compilers  build.sh  build_noqt.sh  clangtidy_check.sh  codecov.sh  codestyle_check.sh  image_cleanup.sh  run-clang-tidy-asynqro.py
include/asynqro/: asynqro  future.h  repeat.h  simplefuture.h  tasks.h
include/asynqro/impl/: cancelablefuture.h  containers_helpers.h  containers_traverse.h  failure_handling.h  promise.h  spinlock.h  tasksdispatcher.h  taskslist_p.h  typetraits.h  zipfutures.h
src/: failure_handling.cpp  future.cpp  tasksdispatcher.cpp
src/extra/: dummy.cpp
tests/: CMakeLists.txt  gtest_CMakeLists.txt.in
tests/common/: crash_handler.h
tests/future/: CMakeLists.txt  cancelablefuture_callbacks_test.cpp  cancelablefuture_inner_morphisms_test.cpp  cancelablefuture_morphisms_test.cpp  cancelablefuture_zip_test.cpp  common_future_callbacks_test.cpp  common_future_inner_morphisms_test.cpp  common_future_morphisms_test.cpp  common_future_zip_test.cpp  copycountcontainers.h  future_basics_test.cpp  future_callbacks_test.cpp  future_create_test.cpp  future_exceptions_test.cpp  future_failure_test.cpp  future_inner_morphisms_test.cpp  future_morphisms_test.cpp  future_sequence_test.cpp  future_sequence_with_failures_test.cpp  future_zip_test.cpp  futurebasetest.h  main.cpp
tests/impl/: CMakeLists.txt  containers_traverse_flatten_test.cpp  containers_traverse_map_no_sockets_test.cpp  containers_traverse_map_one_socket_test.cpp  containers_traverse_map_two_sockets_test.cpp  containers_traverse_reduce_test.cpp  containers_traverse_test.cpp  main.cpp  spinlock_test.cpp  taskslist_test.cpp
tests/tasks/: CMakeLists.txt  main.cpp  main_preheated.cpp  main_preheated_intensive.cpp  repeat_test.cpp  tasks_clustered_test.cpp  tasks_exceptions_test.cpp  tasks_sequence_test.cpp  tasks_test.cpp  tasks_threadbound_test.cpp  tasksbasetest.h
